# sip

./: Cargo.toml  README.md
.github/workflows/: ci.yml
bash/: init_sip  init_sip_project.sh
environments/go-project/: go.mod  main.go
environments/python-project/: main.py  requirements.txt
environments/rust-project/: Cargo.toml
environments/rust-project/src/: main.rs
environments/unknown-project/: README.md
markdown/: project_progress.md  sip_project_roadmap.md  sip_technical_spec.md
registry/data/go/: trusted-modules.json
registry/data/python/: trusted-packages.json
registry/data/rust/: trusted-crates.json
registry/schema/: sip-package.json
scripts/: bulk_fetch_pypi.py
src/: cli.rs  main.rs
src/langs/: go.rs  mod.rs  python.rs  rust.rs
src/sip/: fetch.rs  mod.rs  package.rs  prompt.rs  registry.rs  runner.rs  verify.rs
