[package]
name = "sip"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
dialoguer = "0.11"
indicatif = "0.17"
jsonschema = "0.18"
chrono = { version = "0.4", features = ["serde"] }
